--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ select{
     width: 100%;
     height: 85vh;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 
@@ -87,6 +88,15 @@ select{
 
 .square.active{
     background-color: aquamarine;
+}
+
+.square.bomb{
+    background-color: red;
+}
+
+.main-container h2{
+    width: 100%;
+    text-align: center;
 }
 
 /* Footer container */
